# football-scout-ai

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
.github/workflows/: deploy.yml
app/: config.py  main.py
app/agent/: graph.py  nodes.py  prompts.py  state.py  tools.py
app/db/: database.py
docs/: app.js  index.html  style.css
tests/: test_agent.py
